-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
I create nodemap1 and add range then delete the range in anthoer nodemap2.
Then nodemap1 ip range disappeared.
[Test steps:]
lctl nodemap_add nodemap1
lctl nodemap_add nodemap2
lctl nodemap_add_range --name nodemap1 --range 192.168.19.[0-255]@o2ib20
lctl get_param nodemap.nodemap1.* | grep start_nid
lctl nodemap_del_range --name nodemap2 --range 192.168.19.[0-255]@o2ib20
lctl get_param nodemap.nodemap1.* | grep start_nid
[Test result:]
[root@mdsb1 ~]# lctl nodemap_add nodemap1
[root@mdsb1 ~]# lctl nodemap_add nodemap2
[root@mdsb1 ~]# lctl nodemap_add_range --name nodemap1 --range 192.168.19.[0-255]@o2ib20
[root@mdsb1 ~]# lctl get_param nodemap.nodemap1.* | grep start_nid
[root@mdsb1 ~]# lctl nodemap_del_range --name nodemap2 --range 192.168.19.[0-255]@o2ib20
[root@mdsb1 ~]# lctl get_param nodemap.nodemap1.* | grep start_nid
[root@mdsb1 ~]#